--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,3 +17,9 @@ jobs:
 
       - name: lint
         run: npm run eslint
+
+      - name: test
+        run: npm run test
+
+      - name: build
+        run: npm run build
